# opengl-practice

./: .travis.yml  Cargo.toml  README.md  after.avif  before.avif  database.sqlite3  recording.avif
.github/workflows/: ci.yml  test.yml
.sqlx/: query-7e79823c0e3fffd42ecaaa840710853552bbe583c5172c2addcdfd5e1a739a80.json
binlog-practice/: Cargo.toml
dotenvy-practice/src/: main.rs
encode-practice/: Cargo.toml
encode-practice/src/: main.rs
jwt-practice/src/: main.rs
opengl-practice/: Cargo.toml
opengl-practice/src/: main.rs
poem-practice/: Cargo.toml
ratatui-practice/: Cargo.toml  README.md
sqlx-practice/: Cargo.toml
src/: main.rs
