[package]
name = "mysql-binlog-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql_cdc = "0.1"
walkdir = "2"
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.0.22", features = ["derive"] }
